# ldpltopy

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: check-ci.sh
src/ldpltopy/: __init__.py  __main__.py  ast.py  cli.py  lexer.py  parser.py  preprocess.py  transpiler.py
tests/: test_benchmarks.py  test_cli.py  test_execute_generated.py  test_ldpl_reference_compare.py  test_lexer.py  test_parser.py  test_transpiler.py
tests/fixtures/: 01_hello.ldpl  01_hello_expected.py  02_string_var.ldpl  02_string_var_expected.py  03_number_var.ldpl  03_number_var_expected.py  04_assign.ldpl  04_assign_expected.py  05_display.ldpl  05_display_expected.py  06_concat.ldpl  06_concat_expected.py  07_arithmetic.ldpl  07_arithmetic_expected.py  08_if_else.ldpl  08_if_else_expected.py  09_while.ldpl  09_while_expected.py  10_accept.ldpl  10_accept_expected.py  11_bool_and_or.ldpl  11_bool_and_or_expected.py  12_else_if.ldpl  12_else_if_expected.py  13_for_loop.ldpl  13_for_loop_expected.py  14_for_each.ldpl  14_for_each_expected.py  15_break_continue.ldpl  15_break_continue_expected.py  16_arith_stmts.ldpl  16_arith_stmts_expected.py  17_text_stmts.ldpl  17_text_stmts_expected.py  18_map_list_index.ldpl  18_map_list_index_expected.py  19_sub_call.ldpl  19_sub_call_expected.py  20_io.ldpl  20_io_expected.py  (+11 more)
