[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpltopy"
version = "0.1.0"
description = "Transpilador de un subset de LDPL a Python 3.13"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "GPL-3.0-only" }
authors = [{ name = "ldpltopy contributors" }]
dependencies = ["typer==0.25.1"]

[project.scripts]
ldpltopy = "ldpltopy.cli:app"

[project.urls]
Homepage = "https://github.com/cavazquez/ldpltopy"
Documentation = "https://docs.ldpl-lang.org/"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-benchmark==5.2.3",
  "mypy==2.0.0",
  "ruff==0.15.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # tests sin anotar cada fixture

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
